--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,15 @@
     "name": "moodle/moodle-testing",
     "description": "Test dependencies for Moodle installations",
     "type": "metapackage",
+    "license": "GPL-3.0-or-later",
     "require": {
         "moodle/lms": "^5.1-",
-        "phpunit/phpunit": "^11",
+        "behat/behat": "^3",
         "behat/mink": "^1.11.0",
+        "behat/mink-browserkit-driver": "^2.2.0",
+        "friends-of-behat/mink-extension": "^2.7.5",
         "mikey179/vfsstream": "^1.6",
-        "behat/behat": "^3"
-    },
-    "license": "GPL-3.0-or-later"
+        "oleg-andreyev/mink-phpwebdriver": "1.3.*",
+        "phpunit/phpunit": "^11"
+    }
 }
