--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "friends-of-behat/mink-extension": "^2.7.5",
         "mikey179/vfsstream": "^1.6",
         "oleg-andreyev/mink-phpwebdriver": "1.3.*",
-        "phpunit/phpunit": "^11"
+        "phpunit/phpunit": "^11",
+        "symfony/process": "^4.4 || ^5.0 || ^6.0 || ^7.0",
+        "symfony/http-client": "^4.4 || ^5.0 || ^6.0 || ^7.0",
+        "symfony/mime": "^4.4 || ^5.0 || ^6.0 || ^7.0"
     }
 }
